# events-aggregator

./: Dockerfile  pyproject.toml  run.sh
.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/api/: deps.py  events_routes.py  seats_routes.py  sync_routes.py  tickets_routes.py
app/core/: config.py
app/db/: __init__.py  session.py
app/db/mixins/: __init__.py  timestamps.py
app/db/models/: __init__.py  event.py  place.py  sync_state.py  ticket.py
app/db/repositories/: __init__.py  event_repository.py  place_repository.py  sync_state_repository.py  ticket_repository.py
app/infrastructure/: events_client.py  paginator.py  seats_cache.py
app/usecases/: __init__.py  cancel_ticket.py  create_ticket.py  get_event_detail.py  get_events.py  get_seats.py  sync_events.py
migrations/: env.py
migrations/versions/: 0f1bc297b813_add_sync_state_model.py  1d587bfb9695_init_places_model.py  3f0d65035e82_add_tickets_model.py  641ccbe21c46_add_events_model.py  d2b48c27595e_add_server_default_for_tickets_changed_.py
tests/: conftest.py  test_events_client.py  test_events_paginator.py
